@@ -15,7 +15,8 @@ describe RackFilter do
     @response = javax.servlet.http.HttpServletResponse.impl {}
     @chain = mock "filter chain"
     @dispatcher = mock "dispatcher"
-    @filter = RackFilter.new @dispatcher
+    @filter = RackFilter.new @dispatcher, @rack_context
+    @rack_context.stub!(:getResource).and_return nil
   end
 
   def stub_request(path_info)
@@ -38,7 +39,7 @@ describe RackFilter do
       resp.sendRedirect("/some/url")
     end
     @response.should_receive(:sendRedirect).ordered.with("/some/url")
-    @filter.doFilter(@request, @response, @chain)    
+    @filter.doFilter(@request, @response, @chain)
   end
 
   it "should dispatch to the rack dispatcher if the chain resulted in a client or server error" do
@@ -48,7 +49,7 @@ describe RackFilter do
     @response.should_receive(:reset).ordered
     @request.should_receive(:setAttribute).ordered.with(org.jruby.rack.RackEnvironment::DYNAMIC_REQS_ONLY, true)
     @dispatcher.should_receive(:process).with(@request,@response).ordered
-    @filter.doFilter(@request, @response, @chain)    
+    @filter.doFilter(@request, @response, @chain)
   end
 
   it "should allow downstream entities to flush the buffer in the case of a successful response" do
@@ -56,10 +57,10 @@ describe RackFilter do
       resp.setStatus(200)
       resp.flushBuffer
     end
-    
+
     @response.should_receive(:setStatus).ordered.with(200)
     @response.should_receive(:flushBuffer).ordered
-    @filter.doFilter(@request, @response, @chain)    
+    @filter.doFilter(@request, @response, @chain)
   end
 
   it "should not allow downstream entities in the chain to flush the buffer in the case of an error" do
@@ -73,7 +74,8 @@ describe RackFilter do
     @filter.doFilter(@request, @response, @chain)
   end
 
-  it "should dispatch /some/uri/index to the filter chain as /some/uri/index.html" do
+  it "should dispatch /some/uri/index to the filter chain as /some/uri/index.html if the resource exists" do
+    @rack_context.should_receive(:getResource).with("/some/uri/index.html").and_return java.net.URL.new("file://some/uri/index.html")
     @chain.should_receive(:doFilter).ordered.and_return do |req,resp|
       req.getPathInfo.should == "/index.html"
       resp.setStatus(200)
@@ -92,7 +94,19 @@ describe RackFilter do
     @filter.doFilter(@request, @response, @chain)
   end
 
-  it "should dispatch to /some/uri.html if there is no path info" do
+  it "should dispatch /some/uri/ to /some/uri/index.html if the resource exists" do
+    @rack_context.should_receive(:getResource).with("/some/uri/index.html").and_return java.net.URL.new("file://some/uri/index.html")
+    stub_request("/")
+    @chain.should_receive(:doFilter).ordered.and_return do |req,resp|
+      req.getPathInfo.should == "/index.html"
+      resp.setStatus(200)
+    end
+    @response.should_receive(:setStatus).ordered.with(200)
+    @filter.doFilter(@request, @response, @chain)
+  end
+
+  it "should dispatch to /some/uri.html if the resource exists and there is no path info" do
+    @rack_context.should_receive(:getResource).with("/some/uri.html").and_return java.net.URL.new("file://some/uri.html")
     stub_request(nil)
     @chain.should_receive(:doFilter).ordered.and_return do |req,resp|
       req.getServletPath.should == "/some/uri.html"
